# informer-paddle

./: .gitignore  README.md  btc.ipynb  checkpoints  data  help.ipynb  informer.ipynb  informer.py  main.py  pyproject.toml
data_loader/: binance.py  binance_btc_usdt_2020.csv  data_loader.py  test.csv  test.ipynb
exp/: exp_basic.py  exp_informer.py
informer_paddle/: args.py  crypto_args.py  prediction.py  wth_args.py  wth_prediction.ipynb
main/: btc.ipynb  btc.py
models/: attention.py  decoder.py  embed.py  encoder.py  model.py
tests/: test.ipynb  version.ipynb
utils/: masking.py  timefeatures.py  tools.py
